crates/crucible-cli/src/tui/oil/tests/chat_app_snapshot_tests/snapshots/crucible_cli__tui__oil__tests__chat_app_snapshot_tests__snapshot_status_bar_layout_regression_width_120.snap
---
source: crates/crucible-cli/src/tui/oil/tests/chat_app_snapshot_tests.rs
assertion_line: 856
expression: "render_node_with_planner(&bar.emergency_view(), 120, 4)"
---
 NORMAL  gpt-4o                                                                                                  50% ctx
